2008-12-15  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-util.el (mm-charset-synonym-alist): Add bogus names "UTF8" and
	"ISO_8859-1".

	* gnus-start.el (gnus-backup-startup-file): Improve doc string.

2008-12-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-charset-eval-alist):
	Define it before mm-charset-to-coding-system.
	(mm-charset-to-coding-system): Add optional argument `silent';
	define it before mm-charset-override-alist.
	(mm-charset-override-alist): Add `(gb2312 . gbk)' to the
	default value if it can be used in Emacs currently running;
	silence mm-charset-to-coding-system.

2008-12-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2047.el (rfc2047-charset-to-coding-system): Add new argument
	`allow-override' which says whether to use `mm-charset-override-alist'.
	(rfc2047-decode-encoded-words): Use it.

	* mm-util.el (mm-charset-override-alist): Fix custom type;
	add `(gb2312 . gbk)' to choices.

2008-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-view.el (mm-inline-text-html-render-with-w3m): Make it simple and
	fast.

	* gnus-art.el (gnus-article-wash-html-with-w3m): Ditto.

	* lpath.el: Bind w3m-link-map for Emacs 21, 22, and XEmacs.

2008-12-04  Naohiro Aota  <nao.aota@gmail.com>

	* mm-view.el (mm-inline-text-html-render-with-w3m): Put special keymap
	on links.

	* gnus-art.el (gnus-article-wash-html-with-w3m): Ditto.

2008-12-03  Lute Kamstra  <lute@gnu.org>

	* sha1.el: Remove leading * from docstrings of defcustoms,
	deffaces, defconsts and defuns.

2008-12-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-idna-to-ascii-rhs-1): Protect against local
	users' addresses that don't have domain parts.
	(message-idna-to-ascii-rhs): Use message-narrow-to-headers-or-head
	rather than message-narrow-to-head since there will be the message
	header separator.

2008-12-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnimap.el (nnimap-retrieve-headers-progress): Don't use nnimap-demule